Add header and banner

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./scss/index.scss">
-    <title>Document</title>
+    <link rel="icon" href="./img/favicon.png">
+    <title>ACTIVEBOX</title>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+          <div class="header-wrap">
+            <div class="activebox">
+            <a href="#"><img src="./img/ACTIVEBOX.png" alt="active"><img src="./img/ACTIVEBOX-1.png" alt="box"></span></a>
+            </div>
+            <nav class="navigation">
+              <ul class="navigation-list">
+                <li class="navigation-list__item">
+                  <a href="#">features</a>
+                </li>
+                <li class="navigation-list__item">
+                  <a href="#">works</a>
+                </li>
+                <li class="navigation-list__item">
+                  <a href="#">our team</a>
+                </li>
+                <li class="navigation-list__item">
+                  <a href="#">testimonials</a>
+                </li>
+                 <li class="navigation-list__item">
+                  <a href="#">download</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+    </header>
 
+    <section class="banner">
+        <div class="container">
+            <div class="banner-wrap">
+                <h1 class="banner_title">
+                    Your Favorite One Page Multi Purpose Template
+                </h1>
+            <div class="banner_description">
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p> 
+            </div>
+            <div class="banner_download" id="link_download">
+                <a href="#">Find Out More</a>
+            </div>
+            </div>
+        </div>
+    </section>
 
     <section class="features">
         <div class="container">
