--- a/src/index.html
+++ b/src/index.html
@@ -40,15 +40,17 @@
     <section class="banner">
         <div class="container">
             <div class="banner-wrap">
-                <h1 class="banner_title">
-                    Your Favorite One Page Multi Purpose Template
-                </h1>
-            <div class="banner_description">
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p> 
-            </div>
-            <div class="banner_download" id="link_download">
-                <a href="#">Find Out More</a>
-            </div>
+                <div class="banner_title">
+                    <h1>
+                        Your Favorite One Pagemulti Purpose Template
+                    </h1>
+                </div>
+                <div class="banner_description">
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p> 
+                </div>
+                <div class="banner_download" id="link_download">
+                    <a href="#">Find Out More</a>
+                </div>
             </div>
         </div>
     </section>
@@ -328,23 +330,72 @@
                     </nav>
                 </div>
 
+            </div>
+        </div>   
+    </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <section class="download">
+        <div class="container">
+            <div class="download_text">
+                <div class="download_title">
+                    <h2>
+                        Are You Ready to Start? Download Now For Free!
+                    </h2>
+                </div>
+                <div class="download_description">
+                    <p> Fusce dapibus, tellus ac cursus commodo </p> 
+                </div>
+                <div class="download_button" id="link_download">
+                    <a href="#">download here</a>
                 </div>
             </div>
-        </div>     
+        </div>
     </section>
+
+    <section class="footer">
+        <div class="container">
+            <div class="footer_text">
+                <div class="footer_wrap">
+                    <div class="footer_left">
+                        <h3>Location</h3>
+                        <p>3481 Melrose Place Beverly Hills, CA 90210</p>
+                    </div>
+                    <div class="footer_middle">
+                        <h3>Share with Love</h3>
+                        <nav class="footer-social_media">
+                            <ul class="our_team-social-list">
+                                <li class="our_team-social-item">
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="our_team-social-item">
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="our_team-social-item">
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer_right">
+                        <h3>About ActiveBox</h3>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                    </div>
+                </div>
+
+                <div class="footer_bottom">
+                    <p>Copyright © 2024 ActiveBox. All Rights Reserved Made with <span style="color: #FFFFFF">By Kamal Chaneman</span></p>
+                </div>    
+
+            </div>
+        </div>
+    </section>
+
 
 
     <script type="module" src="./js/app.js"></script>
