--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="./scss/index.scss">
     <link rel="icon" href="./img/favicon.png">
     <title>ACTIVEBOX</title>
@@ -334,6 +335,62 @@
         </div>   
     </section>
 
+    <section class="testimonials">
+        <div class="container">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="swiper-slide_img">
+                            <img src="./img/testimonials_1.jpg" alt="testimonials_1">
+                        </div>
+                        <div class="swiper-slide_text">
+                            <p> “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <h6>Susan Sims, Interaction Designer at XYZ</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide_img">
+                            <img src="./img/testimonials_2.jpg" alt="testimonials_2">
+                        </div>
+                        <div class="swiper-slide_text">
+                            <p> “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <h6>Susan Sims, Interaction Designer at XYZ</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide_img">
+                            <img src="./img/testimonials_3.jpg" alt="testimonials_3">
+                        </div>
+                        <div class="swiper-slide_text">
+                            <p> “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <h6>Susan Sims, Interaction Designer at XYZ</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide_img">
+                            <img src="./img/testimonials_4.jpg" alt="testimonials_4">
+                        </div>
+                        <div class="swiper-slide_text">
+                            <p> “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <h6>Susan Sims, Interaction Designer at XYZ</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide_img">
+                            <img src="./img/testimonials_5.jpg" alt="testimonials_5">
+                        </div>
+                        <div class="swiper-slide_text">
+                            <p> “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <h6>Susan Sims, Interaction Designer at XYZ</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+            <!-- <div class="swiper-pagination"></div> -->
+        </div>
+    </section>
+
     <section class="download">
         <div class="container">
             <div class="download_text">
@@ -397,7 +454,7 @@
     </section>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./js/app.js"></script>
 </body>
 </html>
