--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,19 @@
             <nav class="navigation">
               <ul class="navigation-list">
                 <li class="navigation-list__item">
-                  <a href="#">features</a>
+                  <a href="#features">features</a>
                 </li>
                 <li class="navigation-list__item">
-                  <a href="#">works</a>
+                  <a href="#works">works</a>
                 </li>
                 <li class="navigation-list__item">
-                  <a href="#">our team</a>
+                  <a href="#our_team">our team</a>
                 </li>
                 <li class="navigation-list__item">
-                  <a href="#">testimonials</a>
+                  <a href="#testimonials">testimonials</a>
                 </li>
                  <li class="navigation-list__item">
-                  <a href="#">download</a>
+                  <a href="#download">download</a>
                 </li>
               </ul>
             </nav>
@@ -43,7 +43,7 @@
             <div class="banner-wrap">
                 <div class="banner_title">
                     <h1>
-                        Your Favorite One Pagemulti Purpose Template
+                        Your Favorite One Page multi Purpose Template
                     </h1>
                 </div>
                 <div class="banner_description">
@@ -56,7 +56,7 @@
         </div>
     </section>
 
-    <section class="features">
+    <section class="features" id="features">
         <div class="container">
             <div class="features-wrap">
                 <div class="features-card">
@@ -117,11 +117,10 @@
         </div>
     </section>
 
-    <section class="work">
+    <section class="work" id="works">
         <div class="container">
             <div class="work-wrap">
                 <div class="work-wrap-list">
-
                     <div class="work-wrap__item">
                             <img src="./img/work_1.jpg" alt="work_1">
                         <div class="work_text"> 
@@ -207,7 +206,7 @@
         </div>
     </section>
 
-    <section class="our_team">
+    <section class="our_team" id="our_team">
         <div class="container">
             <div class="our_team-wrap">
 
@@ -335,7 +334,7 @@
         </div>   
     </section>
 
-    <section class="testimonials">
+    <section class="testimonials" id="testimonials">
         <div class="container">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
@@ -391,7 +390,7 @@
         </div>
     </section>
 
-    <section class="download">
+    <section class="download" id="download">
         <div class="container">
             <div class="download_text">
                 <div class="download_title">
