--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="./scss/index.scss">
     <link rel="icon" href="./img/favicon.png">
     <title>ACTIVEBOX</title>
@@ -13,7 +12,14 @@
         <div class="container">
           <div class="header-wrap">
             <div class="activebox">
-            <a href="#"><img src="./img/ACTIVEBOX.png" alt="active"><img src="./img/ACTIVEBOX-1.png" alt="box"></span></a>
+                <div class="logo">
+                    <a href="#"><img src="./img/ACTIVEBOX.png" alt="active"><img src="./img/ACTIVEBOX-1.png" alt="box"></a>
+                </div>
+                <div class="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>    
             </div>
             <nav class="navigation">
               <ul class="navigation-list">
@@ -386,7 +392,6 @@
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
-            <!-- <div class="swiper-pagination"></div> -->
         </div>
     </section>
 
@@ -451,7 +456,6 @@
             </div>
         </div>
     </section>
-
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./js/app.js"></script>
